external-crates/move/crates/move-compiler/tests/move_2024/expansion/constants_dont_shadow_leading_access_struct.exp
error[E03006]: unexpected name in this position
   ┌─ tests/move_2024/expansion/constants_dont_shadow_leading_access_struct.move:15:13
   │
15 │             S::foo(); // resolves to struct
   │             ^ Expected a module or address in this position, not a module member

